--- a/spring-framework-5.2.0.RELEASE/springdemo/build.gradle
+++ b/spring-framework-5.2.0.RELEASE/springdemo/build.gradle
@@ -4,12 +4,13 @@ plugins {
 
 group 'org.springframework'
 version '5.2.0.RELEASE'
-
+sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile(project(":spring-context"))
+    compile(project(":spring-aspects"))
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
