--- a/wudiSpring/pom.xml
+++ b/wudiSpring/pom.xml
@@ -48,6 +48,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.9</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>wudiSpring</finalName>
