--- a/wudiSpring/pom.xml
+++ b/wudiSpring/pom.xml
@@ -59,7 +59,7 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.6</version>
-            <scope>runtime</scope>
+<!--            <scope>runtime</scope>-->
         </dependency>
 
 
