--- a/wudiSpring/pom.xml
+++ b/wudiSpring/pom.xml
@@ -62,6 +62,12 @@
 <!--            <scope>runtime</scope>-->
         </dependency>
 
+<!--        json -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
 
     </dependencies>
     <build>
