--- a/miniSpring/pom.xml
+++ b/miniSpring/pom.xml
@@ -7,8 +7,10 @@
     <groupId>org.example</groupId>
     <artifactId>miniSpring</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <!--  打包方式   -->
+    <packaging>jar</packaging>
     <properties>
+<!--        编码方式-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
@@ -48,10 +50,30 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.9</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.6</version>
+            <!--            <scope>runtime</scope>-->
+        </dependency>
+
+        <!--        json -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
     </dependencies>
     <build>
-        <finalName>wudiSpring</finalName>
-        <!--        <pluginManagement>-->
+        <finalName>miniSpring</finalName>
         <plugins>
             <plugin>
                 <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
@@ -72,7 +94,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <!--        </pluginManagement>-->
     </build>
 
 </project>
